Fixed header on mobile 2

--- a/blog/static/customStyle.scss
+++ b/blog/static/customStyle.scss
@@ -285,12 +285,12 @@ iframe {
 
     #header {
         .home {
-            padding-top: 17px;
+            padding-top: 19px;
             font-size: 0.8em;
         }
 
         .header-links {
-            padding-top: 17px;
+            padding-top: 19px;
             font-size: 0.8em;
         }
     }
